--- a/src/components/navbar/navbar.module.scss
+++ b/src/components/navbar/navbar.module.scss
@@ -23,6 +23,7 @@
     flex-direction: column;
     align-items: flex-end;
     gap: 4px;
+    z-index: 1;
     padding: 30px 16px;
     li{
       list-style: none;
