--- a/src/components/carousel/card1/card.module.scss
+++ b/src/components/carousel/card1/card.module.scss
@@ -1,3 +1,25 @@
+
+#card1{
+  transform: scale(1);
+  position: absolute;
+  top: 100px;
+  transition: .5s;
+}
+#card2{
+  transform: scale(0.97);
+  z-index: -1;
+  position: absolute;
+  top: 50px;
+  transition: .5s;
+}
+#card3{
+  transform: scale(0.94);
+  position: absolute;
+  top: 0;
+  z-index: -1;
+  transition: .5s;
+}
+
 .card{
   width: 100%;
   height: 522px;
@@ -5,17 +27,14 @@
   border-radius: 30px;
   border: 1px solid #6F6F6D;
   box-shadow: 0px -16px 250px 0px rgba(0, 0, 0, 0.95);
-  transform: scale(1);
 
-  z-index: 1;
 
   display: flex;
   justify-content: space-between;
   flex-direction: column;
 
-  #active{
-    animation: slide 1s ease-in;
-  }
+  
+
   .up{
     display: flex;
     justify-content: space-between;
