--- a/src/components/carousel/card2/card.module.scss
+++ b/src/components/carousel/card2/card.module.scss
@@ -1,4 +1,24 @@
 
+#card1{
+  transform: scale(1);
+  position: absolute;
+  top: 100px;
+  transition: .5s;
+}
+#card2{
+  transform: scale(0.97);
+  position: absolute;
+  top: 50px;
+  z-index: -1;
+  transition: .5s;
+}
+#card3{
+  transform: scale(0.94);
+  z-index: -2;
+  position: absolute;
+  top: 0;
+  transition: .5s;
+}
 
 .card{
   width: 100%;
@@ -7,16 +27,12 @@
   border-radius: 30px;
   border: 1px solid #6F6F6D;
   box-shadow: 0px -16px 250px 0px rgba(0, 0, 0, 0.95);
-  transform: scale(0.97);
-
-  position: absolute;
-  top: 100px;
-  z-index: 1;
 
   display: flex;
   justify-content: space-between;
   flex-direction: column;
 
+  
   #active{
     animation: slide 1s ease-in;
   }
