--- a/src/components/price/price.module.scss
+++ b/src/components/price/price.module.scss
@@ -1,6 +1,8 @@
 .price{
+  margin-top: 100px;
   .none{
     height: 100px;
+    scroll-margin-top: 110px;
   }
   .title{
     margin-left: 40px;
@@ -11,6 +13,7 @@
     }
   }
   .select{
+    z-index: -100;
     width: 290px;
     height: 40px;
     margin-left: 20px;
@@ -20,6 +23,8 @@
     justify-content: center;
     padding: 0;
     margin-top: 18px;
+    z-index: 100;
+
     div{
       padding: 0 30px;
       padding-top: 9px;
@@ -28,6 +33,7 @@
       color: white;
       font-size: 18px;
       cursor: pointer;
+      z-index: 20;
       &.active{
         background: white;
         color: black;
